--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,13 @@
   </properties>
 
 <dependencies>
-   	<dependency>
-  		<groupId>mysql</groupId>
-  		<artifactId>mysql-connector-java</artifactId>
-  		<version>8.0.19</version>
-  	</dependency>
-  	<dependency>
+		<dependency>
+			<groupId>org.glassfish.main.extras</groupId>
+			<artifactId>glassfish-embedded-all</artifactId>
+			<version>5.1.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.13</version>
@@ -28,11 +29,12 @@
 			<version>8.0</version>
 			<scope>provided</scope>
 		</dependency>
-  	<dependency>
-    <groupId>org.eclipse.persistence</groupId>
-    <artifactId>eclipselink</artifactId>
-    <version>2.7.6</version>
-</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.200</version>
+			<scope>test</scope>
+		</dependency>
  </dependencies>
  <build>
 		<plugins>
