--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,16 @@
 			<version>1.4.200</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+		<version>1.6</version>
+</dependency>
  </dependencies>
  <build>
 		<plugins>
