--- a/pom.xml
+++ b/pom.xml
@@ -43,8 +43,13 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
-		<version>1.6</version>
-</dependency>
+			<version>1.6</version>
+		</dependency>
+		<dependency>
+   			 <groupId>es.uma.informatica.sii</groupId>
+   			 <artifactId>anotaciones</artifactId>
+    		<version>0.0.1</version>
+		</dependency>
  </dependencies>
  <build>
 		<plugins>
