--- a/Grupo_L-war/pom.xml
+++ b/Grupo_L-war/pom.xml
@@ -35,6 +35,12 @@
 	    <version>10.0.0</version>
 		</dependency>
 		
+		<dependency>
+    		<groupId>org.omnifaces</groupId>
+   			<artifactId>omnifaces</artifactId>
+    		<version>3.11.1</version>
+		</dependency>
+
 	  	<dependency>
 	  		<groupId>es.uma.informatica.es</groupId>
 	  		<artifactId>Grupo_L-ejb</artifactId>
