--- a/Grupo_L-tests/pom.xml
+++ b/Grupo_L-tests/pom.xml
@@ -28,6 +28,11 @@
 			<version>3.141.59</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+   			 <groupId>es.uma.informatica.sii</groupId>
+   			 <artifactId>anotaciones</artifactId>
+    		<version>0.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
